Bug 1677881 - Update libsoundtouch to revision 17a63e9. r=chunmin

Pickup those commits up:
17a63e9 - Fix bug with too small initial skipFract value
6533514 - Improve soundtouch.clear() so that it really clears TDStretch & RateTransposer states
81b0d74 - Correct initial skip value
5e76cf2 - Disable skipping of unaligned SIMD memory offset by default
f38cfa6 - Call "clear()" after changing anti-alias filter on/off
762f560 - Updated versions and documents for release 2.2
1d42d89 - Merge branch 'improve-autovectorization' into 'master'
bf3cec0 - Improvements to help compiler autovectorization

Differential Revision: https://phabricator.services.mozilla.com/D109362