media/libsoundtouch/src/RateTransposer.cpp
@@ -78,6 +78,7 @@ void RateTransposer::enableAAFilter(bool newMode)
 #ifndef SOUNDTOUCH_PREVENT_CLICK_AT_RATE_CROSSOVER
     // Disable Anti-alias filter if desirable to avoid click at rate change zero value crossover
     bUseAAFilter = newMode;
+    clear();
 #endif
 }
 
@@ -193,6 +194,7 @@ void RateTransposer::clear()
     outputBuffer.clear();
     midBuffer.clear();
     inputBuffer.clear();
+    pTransposer->resetRegisters();
 
     // prefill buffer to avoid losing first samples at beginning of stream
     int prefill = getLatency();
