media/libsoundtouch/src/RateTransposer.h
@@ -59,8 +59,6 @@ public:
     };
 
 protected:
-    virtual void resetRegisters() = 0;
-
     virtual int transposeMono(SAMPLETYPE *dest, 
                         const SAMPLETYPE *src, 
                         int &srcSamples)  = 0;
@@ -84,6 +82,8 @@ public:
     virtual void setRate(double newRate);
     virtual void setChannels(int channels);
     virtual int getLatency() const = 0;
+
+    virtual void resetRegisters() = 0;
 
     // static factory function
     static TransposerBase *newInstance();
